# linkit

./: .gitignore  README.md
backend/go-server/: main.go
backend/rust-server/: Cargo.toml  test.js
backend/rust-server/src/: auth.rs  dynamo.rs  dynamo_types.rs  main.rs  test.rs
backend/server/: .dockerignore  .gitignore  Dockerfile  README.md  ai.js  ai.ts  auth.js  auth.ts  bun.lockb  chroma.ts  compose.yml  database-edit.ts  dynamo.js  dynamo.ts  linkit.ts  package-lock.json  package.json  test.test.ts  trainer.ts  tsconfig.json  websocket.js  websocket.ts
backend/server/types/: database.d.ts
frontend/: linkit-chat.css  linkit-chat.js  linkit.d.ts
frontend/ui/: bun.lockb  package-lock.json  package.json  vite.config.js
frontend/ui/src/: App.css  App.tsx  Chat.tsx  main.tsx
frontend/versions/: linkit-chat-v1.js  linkit-chat-v2.js  linkit-chat-v3.js  linkit-chat.js
plugins/wordpress/: compose.yml
plugins/wordpress/linkit/: .linkit.php.swp  linkit.php
server/: Dockerfile  ai.js  auth.js  chroma.js  compose.yml  linkit.js  package-lock.json  package.json  script.js  websocket.js
server/chroma/backup/43003b2c-e27e-447a-9e91-4645d2956316/: index_metadata.pickle
