[package]
name = "linkit"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.60.0"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.1", features = ["ws"]}
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.135"}
tower = { version = "0.4", features = ["limit", "buffer"] }